--- a/src/components/Header/__logo/header__logo.css
+++ b/src/components/Header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  font-family: "Roboto Slab", "Source Sans Pro", Arial, sans-serif;
+  font-family: "Roboto Slab", Arial, sans-serif;
   color: #fff;
   text-decoration: none;
   font-size: 20px;
