--- a/src/components/SearchForm/__input/search__input.css
+++ b/src/components/SearchForm/__input/search__input.css
@@ -1,6 +1,6 @@
 .search__input {
-  max-width: 376px;
   height: 22px;
+  width: 65%;
   color:  #1A1B22;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
@@ -8,11 +8,12 @@
   line-height: 22px;
   text-align: left;
   border: none;
+  outline: none;
   margin-top: 21px;
 }
 
 .search__input:hover{
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .search__input:focus {
@@ -27,10 +28,11 @@
 
 @media (max-width: 500px) {
   .search__input  {
+    width: calc(100% - 32px);
     border-radius: 100px;
     border: 1px solid #d1d2d6;
     height: 56px;
-    padding-left: 14px;
+    padding: 0 14px;
   }
 }
 
