--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
 @import url(./__menu-button/header__menu-button.css);
 @import url(./__menu-span/header__menu-span.css);
 @import url(./__menu-toggle/header__menu-toggle.css);
+@import url(./_mobile/header_mobile.css);
 
 .header {
   height: 60px;
