--- a/src/components/PopupWithForm/__button-save/popup__button-save.css
+++ b/src/components/PopupWithForm/__button-save/popup__button-save.css
@@ -18,3 +18,10 @@
   cursor: pointer;
   background-color: #347eff;
 }
+
+.popup__button-save:disabled {
+  background-color: #e6e8eb;
+  color: #b6bcbf;
+  cursor: default;
+}
+
