--- a/src/components/PopupWithForm/__input/popup__input.css
+++ b/src/components/PopupWithForm/__input/popup__input.css
@@ -17,9 +17,10 @@
 .popup__input:focus {
   background-color: rgba(47, 113, 229, .1);
 }
-
 .popup__input:disabled {
-  color: rgba(0, 0, 0, .2);
+  color: rgba(0, 0, 0, .4);
+  cursor: not-allowed;
+  border: none;
 }
 
 .popup__input::-webkit-input-placeholder {
