--- a/src/components/NewsCard/__img/card__img.css
+++ b/src/components/NewsCard/__img/card__img.css
@@ -1,11 +1,12 @@
 .card__img {
   box-sizing: border-box;
+  width: 100%;
   height: 272px;
   border-radius: 16px 16px 0 0;
   display: flex;
   justify-content: space-between;
   object-fit: cover;
-  object-position: center;
+  object-position: left top;
 }
 
 @media (max-width: 850px) {
