--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,12 +3,15 @@
 @import url(./__form/search__form.css);
 @import url(./__input/search__input.css);
 @import url(./__button/search__button.css);
+@import url(./__span-error/search__span-error.css);
 
 .search {
   max-width: 608px;
   margin: 0 auto;
   color: white;
   padding-top: 80px;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 768px) {
