--- a/src/components/SearchForm/__form/search__form.css
+++ b/src/components/SearchForm/__form/search__form.css
@@ -6,6 +6,8 @@
   border: 1px solid #d1d2d6;
   background-color: #fff;
   padding-left: 21px;
+  position: relative;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
