--- a/src/components/NewsCardList/__cards/card-list__cards.css
+++ b/src/components/NewsCardList/__cards/card-list__cards.css
@@ -1,14 +1,19 @@
 .card-list__cards {
   font-family: 'Inter', Arial, sans-serif;
-  width: 100%;
   display: grid;
   grid-template-columns: repeat(3,minmax(224px,1fr));
   grid-column-gap: 16px;
   grid-row-gap: 16px;
   justify-content: center;
   list-style-type: none;
-  padding: 0;
-  margin-bottom: 63px;
+  padding: 47px 104px 46px;
+  background-color: #f5f6f7;
+}
+
+@media (max-width: 1000px) {
+  .card-list__cards {
+    padding: 81px 40px;
+  }
 }
 
 @media (max-width: 850px) {
@@ -17,6 +22,13 @@
     grid-template-columns: repeat(auto-fill,minmax(224px,1fr));
     grid-column-gap: 8px;
     grid-row-gap: 8px;
+    padding: 18px 40px 0;
+  }
+}
+
+@media (max-width: 700px) {
+  .card-list__cards {
+    padding: 41px 16px;
   }
 }
 
@@ -25,5 +37,7 @@
     margin-bottom: 14px;
     grid-template-columns: repeat(auto-fill, 288px);
     grid-row-gap: 8px;
+    padding: 10px 16px 0;
   }
 }
+
