--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,6 +13,8 @@
   margin: 0 auto;
   min-height: 100vh;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 700px) {
