--- a/src/components/SearchForm/__input/search__input.css
+++ b/src/components/SearchForm/__input/search__input.css
@@ -29,7 +29,7 @@
 }
 
 .search__input:focus {
-  background-color: rgba(47, 113, 229, .1);
+  border: 1px solid rgba(47, 113, 229, .1);
 }
 
 .search__input::-moz-placeholder {
